web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-strict-catch-parameter/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,29)
1|"use strict"; try {} catch (yield) {}
 |                           ^
